raw/ap-northeast-1/security-groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0569c78a040306b9b",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-06105f1cfd173e343",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:647828570435:security-group/sg-0569c78a040306b9b",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-0569c78a040306b9b"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-83d11fe6",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-a3be4fc6",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:647828570435:security-group/sg-83d11fe6",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-83d11fe6"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0c345bc6e539833e2",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0ed8b0c85bd3d6ee2",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:647828570435:security-group/sg-0c345bc6e539833e2",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-0c345bc6e539833e2"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
